:art: Modified .gitignore as per current scenario.
currently there is nothing to ignore so removed all ignore patterns.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,1 @@
-# Ignore everything
-*
-
-# But not these files...
-!/.gitignore
-!/.gitattributes
-
-!*.go
-!go.sum
-!go.mod
-
-!README.md
-!LICENSE
+# nothing yet to ignore
