--- a/.github/workflows/build-oci.yaml
+++ b/.github/workflows/build-oci.yaml
@@ -5,7 +5,7 @@ run-name: Build OCI Image for GoLang binary
 on:
   push:
     #branches: ['main']
-    tags: ['v*']
+    tags: ['r*']
 
   #pull_request:
   #  branches: ['main']
