--- a/.github/workflows/build-oci.yaml
+++ b/.github/workflows/build-oci.yaml
@@ -56,7 +56,7 @@ jobs:
       - name: login to docker hub
         uses: docker/login-action@v2
         with:
-          #registry: docker.io
+          registry: ${{ secrets.GH_REGISTRY }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
